plang/testing/logs/false-incorrect/9/program9.p.p
whP.
jaR O c.
n mq axOuy (biBMr sd) :- (wtwV s); (l Eg); oGV4M Pc3oY v5sl2; aLDIc (c9 (F) (I1kdF)) (dYsz) X (chNdH (ySU aU ERqR4 (cs Vze))); (eO), vwLlR, zmis; gtT jaSC nA (qf1L h h07 dY); lMr (eCcw4); y4 U1yt (u u9 YiG).
rv FFR (TMT) :- (tqj gNmE (GHT) (Z)).
q h9f :- zL abIwa (h (clgG (X6yc)) M7 qnxv) u2.

cRq sAX Pj :- qLkc (C) (Vjkp) CZ (r vg2 (W90K8) (PtRT)).
x9 (T) :- gifxa vgSHI, aquj wR CH, mFI; eB (Et) (Er6SJ), (iwq (FpMTX) lP); zVj; aHe ohCmU t BXN5, aSd (ITVp) (Z) lgGs H; ((qP (zUP0B Sqfvm) sCUX Zkgqb (P))).


gJB8d (rK (f (ZnW) (LkzP) (zb) (po)) LXvZ nDtAQ (P98P)) (pnil) (IyxiY) (EmQ) :- gP4eA vFm (XR) (FOwGO); qyLFK Rt9pc GfE baaZ, (c5B7 (d15w) a, j YN4be (GuUfe) D), rq8 (YgO) vButJ Z.
s (tU SGP (UncBV)) (K).

q2Tx E4M (Qq) (HSo) (K7).
zc3d (Wr).

kKP ICZFV yxfLS.


eRBK.


rrwSJ o (s38O (E9WO)) (M1J) :- zl8 H04b.


wLge (jA9w (Kl) (L) (iS (r (ETviM) (l LX WL (vf9 (M) (Qx3))) (dlXh ANFz (T) q))) k).
u dk r :- ttlxU (oa nK (lBfUW R) yKk7) SoM4 r00K6 (txKd MXBU (Sb)); (n6nZ (GDa) (twR) KA ohfxY), dxvF9 (Mh7a) z3KnI, r88t, wTxm, i, oiB (d9Nf) (Q) ky vDXJn; aFJS PnXQc (pAO v (s0L (p (VH) cF7yJ) (Gk) U1En (wRP ky4yf Z8x (JRPP) (cuXjp (IKc) (Oc)))) hxqW) (x0ygU (aKhl tWwX Va gzInI DoL) oti (cj (e ElBdz (iuS1) Gig0)) yUbS) (Di); dXUj, jYHNn (HT) ltm EGDKV (tiwNi (v9k0 Rfjs)); moXQ2 E; abw (yAu2q rVx5U); (h3 (hC) (Ns7) z8ra), u (jHj3 (WHU)) (v (QTZz) (p8Xtx (e2u X1Uw3) f) N) d3 (oLYoy).

? ((d9f (uM mIYf (YWak) eoo4b) qbo; xu5 (hi (c4R XeRGh (D) (G)) V h) vx (n zc TwU) l), yS a, f (HG), jRF8 YAQK (n (iDpS (G5YG) (xCnp Wi5 O (L2)) (g (P) (B6)) (Ow9uE))) nEE WmJU); uK NkVEQ EAmeQ WWhnv.


